[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI/SimpleHUD.gd" id="SimpleHUD_script"]

[node name="SimpleHUD" type="CanvasLayer"]
script = ExtResource("SimpleHUD_script")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopLeft" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0

[node name="ScoreLabel" type="Label" parent="UI/TopLeft"]
layout_mode = 2
text = "Score: 0"
theme_override_font_sizes/font_size = 24

[node name="WaveLabel" type="Label" parent="UI/TopLeft"]
layout_mode = 2
text = "Wave: 1"
theme_override_font_sizes/font_size = 20

[node name="LivesLabel" type="Label" parent="UI/TopLeft"]
layout_mode = 2
text = "Lives: 3"
theme_override_font_sizes/font_size = 18

[node name="TopRight" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0

[node name="HealthBar" type="ProgressBar" parent="UI/TopRight"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/TopRight"]
layout_mode = 2
text = "Health: 100"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -10.0
text = "WASD: Move | Space/Click: Shoot"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1